Fixing deprecated Class.newInstance() #605